objects/SMAX_PS_Contact_Integration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SMAX Contact Integration</label>
    <fields>
        <fullName>SMAX_PS_Ignore_Users__c</fullName>
        <description>Comma Separated list of tokens.
During Contact Triggers, if Current Username contains any of the tokens the Platform Events will not be sent.</description>
        <inlineHelpText>Comma Separated list of tokens.
During Contact Triggers, if Current Username contains any of the tokens the Platform Events will not be sent.</inlineHelpText>
        <label>Ignore Users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAS_PS_Create_Contacts_on_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not Contacts should be created into SAP when they are updated, if they haven&apos;t been previously created.</description>
        <inlineHelpText>Indicates whether or not Contacts should be created into SAP when they are updated, if they haven&apos;t been previously created.</inlineHelpText>
        <label>Create Contacts on Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_Contact_Create_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Contact Create Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Send_Contact_Update_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Contact Update Events</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>